# lloyd

./: .env.example  .gitignore  ACTIVITY_LOG.md  CLAUDE.md  CODEBASE_REVIEW.md  CONCERNS_AND_FIXES.md  HANDOFF.md  LLOYD_ANALYSIS.md  LLOYD_IMPLEMENTATION_SUMMARY.md  RALPH_TO_RALPHY_ANALYSIS.md  README.md  STRESS_TEST_LOG.md  calculator.py  calculator_test.py  pyproject.toml  start_runpod_tunnel.bat  start_runpod_tunnel.sh  system_design.txt  test_calculator.py
.lloyd/: prd.json  progress.txt
.lloyd/brainstorms/: 4c590d75.json
.lloyd/debug/: 75d040e0.json
.lloyd/inbox/: items.json
.lloyd/knowledge/: entries.json
src/lloyd/: __init__.py  api.py  config.py  main.py
src/lloyd/agents/: __init__.py  analyst.py  architect.py  base.py  coder.py  researcher.py  reviewer.py  tester.py  writer.py
src/lloyd/brainstorm/: __init__.py  session.py
src/lloyd/crews/: __init__.py
src/lloyd/debug/: __init__.py  models.py  store.py
src/lloyd/extensions/: __init__.py  base.py  builder.py  manager.py  scaffold.py
src/lloyd/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
src/lloyd/inbox/: __init__.py  models.py  store.py
src/lloyd/knowledge/: __init__.py  models.py  store.py
src/lloyd/memory/: __init__.py  git_memory.py  knowledge.py  prd_manager.py  progress.py
src/lloyd/orchestrator/: __init__.py  complexity.py  enums.py  flow.py  idea_queue.py  input_classifier.py  intent_classifier.py  iterative_executor.py  metrics.py  parallel_executor.py  policy_engine.py  project_context.py  recovery.py  router.py  safety.py  spec_parser.py  state.py  thread_safe_state.py
src/lloyd/selfmod/: __init__.py  classifier.py  clone_manager.py  handler.py  queue.py  test_runner.py
templates/: agent_prompt.md  prd.json.template  task_prompt.md
tests/: __init__.py  benchmark_parallel.py  test_adaptive_complexity.py  test_api.py  test_cache.py  test_cli.py  test_graph.py  test_idea_queue.py  test_import_injector.py  test_input_handling.py  test_knowledge_base.py  test_model_router.py  test_parallel_executor.py  test_policy_engine.py  test_prd_manager.py  test_probabilistic.py  test_progress.py  test_recovery.py  test_router.py  test_safety.py  test_state.py  test_tools.py
tests/benchmark/: __init__.py  compare_executors.py  compare_executors2.py
(+53 files in other folders)
